tests/parser/parse-while.2.bad.error
error: Malformed while expression
  --> test:4:23
   |
 4 |  (define f (while false))
   |                        ^ expected body
