tests/parser/parse-while.2.bad.coalton
;; BAD: Parse While
(package test-parser)

(define f (while false))
